# COMP3431_Team_Robot

./: .gitignore  README.md
.history/src/wall_follower/src/: wall_follower_20220930231318.cpp  wall_follower_20220930231442.cpp  wall_follower_20221002001801.cpp  wall_follower_20221002001854.cpp  wall_follower_20221002001919.cpp  wall_follower_20221002002038.cpp  wall_follower_20221003134916.cpp  wall_follower_20221003134936.cpp  wall_follower_20221003135011.cpp
cv_basics/: package.xml  setup.py
cv_basics/cv_basics/: webcam_pub.py
launch/: system_launch.xml
src/: requirement.txt  requirements.txt
src/image_processing/: package.xml  setup.cfg  setup.py
src/image_processing/image_processing/: find_hsv_range.py  image_processor.py  test.ipynb
src/image_processing/launch/: image_processing.launch.py
src/tf2_examples/: setup.py
src/tf2_examples/launch/: tf2_example.launch.py
src/tf2_examples/tf2_examples/: my_node.py
src/wall_follower/: CMakeLists.txt  package.xml
src/wall_follower/include/wall_follower/: wall_follower.hpp
src/wall_follower/launch/: wall_follower.launch.py
src/wall_follower/src/: wall_follower.cpp
